html e css totalmente alterado

--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -1,64 +1,70 @@
-body {
-    background-color: hsl(185, 75%, 39%);
-    text-color: hsl(227, 10%, 46%);
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
+
+body{
+    background-color: var(--background-color);
+    height: 100vh;
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 18px;
 }
 
-.container {
-    background-color: white;
-    width: 300px;
-    height: 200px;
+.image-tamanho{
+    width: 100px;
+}
+
+hr{
+    width: 100%;
+}
+
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.card{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    margin: auto;
-    margin-top: 200px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    justify-content: space-between;
+    gap: 25px;
+    background-color: #fff;
+    border-radius: 10px;
+    margin: 20px;
+    width: 330px;
+    height: 350px;
 }
 
-.foto {
+.card .profile-informations{
     display: flex;
-    width: 90px;
-    margin: auto;
-    border-radius:60px;
-    padding: 5px;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    gap: 10px;
+    height: 100%;
 }
 
-h1 {
-    text-align: center;
-    font-family: 'kumbh sans';
-    font-size: 18px;
-    margin-bottom: 15px;
+.card .profile-informations img{
+    border-radius: 50%;
+    margin-top: 20px;
 }
 
-.cor-idade{
-    color:hsl(185, 75%, 39%)
-}
-
-.cidade {
-    font-family: 'kumbh sans';
-    text-align: center;
-    color: hsl(185, 75%, 39%);
-    font-weight: 700;
-    margin-bottom: 30px;
-}
-
-.secundaria{
-    background-color: white;
-    padding: 50px;
-    text-align: center;
-    width: 300px;
-    height: 100px;
+.card .profile-numbers{
     display: flex;
     align-items: center;
-    margin: auto;
-    margin-top: 0.4px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    justify-content: space-evenly;
+    width: 100%;
+    padding-bottom: 30px;
+    text-align: center;
 }
 
-.negrito{
-    font-family: 'kumbh sans';
+.profile-numbers .info .counter, 
+.card .profile-informations p{
     font-weight: 700;
+}
+
+.card .profile-informations .age,
+.card .profile-informations .city, 
+.profile-numbers .info .counter-type{
+    color: var(--text-color);
 }
